# neoforge-mcp-server

./: .coverage  .gitignore  .repomix-output.txt  .repomixignore  CHANGELOG-code-understanding.md  Makefile  README.md  browser_pool.py  build.py  build_grammars.py  cli.py  cursor-tools.config.json  debug_js_ast.py  debugger.py  decorators.py  docker-compose.yml  error_handler.py  integration.py  language_adapters.py  llm.Dockerfile  llm_server.md  metrics.py  performance_report_20250404_145933.json  performance_report_20250404_150011.json  performance_report_20250404_172556.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_servers.py  run_tests.py  server.py  swift.dylib  test.js  test_integration.py  test_js_parser.py  test_js_parser_coverage.py  test_js_parser_simple.py  test_manually.py  test_parser.py  test_swift_parser.py.backup  (+2 more)
code_understanding/: javascript_adapter.py  language_parser.py  semantic_analysis.py  swift_adapter.py
config/: core_mcp.yaml  default.yaml  llm_mcp.yaml  neod_mcp.yaml  neodo_mcp.yaml  neollm_mcp.yaml  neolocal_mcp.yaml  neoo_mcp.yaml
fix-scripts/: fix_escape_sequences.py
mcp/common/: __init__.py  decorators.py  monitoring.py  neodo_common.py
mcp/server/: __init__.py  container.py  server.py
memory-bank/: .neorules  active-context.md  implementation_plan_ai_tools.md  implementation_summary.md  missing_functions.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md  test_implementation_plan.md  test_suite_summary.md
monitoring/: alertmanager.yml  dashboard.py  grafana-dashboard.json  otel-collector-config.yaml  prometheus-rules.yml  prometheus.yml
monitoring/alertmanager-templates/: slack.tmpl
scripts/: build_languages.py
server/: __init__.py  core.py  llm.py  neod.py  neodo.py  neollm.py  neolocal.py  neoo.py
server/code_understanding/: __init__.py  analyzer.py  build_languages.py  common_types.py  complex_imports_test.js  comprehensive_test.py  context_mapper.py  dependency_analyzer.py  extractor.py  graph.py  javascript_parser.py  language_adapters.py  mock_parser.py  module_resolver.py  package_analyzer.py  parser.py  relationship_extractor.py  relationships.py  semantic_analyzer.py  standalone_test.py  symbols.py  test_analyzers.py  test_enhanced_js_parser.py  test_js_parser.py  test_js_parser_advanced.py  test_js_parser_coverage.py  test_js_parser_edge_cases.py  test_js_parser_performance.py  test_language_adapters.py  test_real_parser.py  test_swift_parser.py  test_swift_parser.py.bak  test_swift_parser_advanced.py  test_swift_parser_coverage.py  test_typescript_parser.py
server/core/: __init__.py  __main__.py  main.py  server.py
server/llm/: __init__.py  __main__.py  main.py  manager.py  models.py  server.py
server/neod/: __init__.py  __main__.py  main.py  server.py
server/neodo/: README.md  __init__.py  __main__.py  main.py  server.py
server/neollm/: __init__.py  __main__.py  main.py  server.py
server/neolocal/: __init__.py  __main__.py  main.py  server.py
server/neoo/: __init__.py  __main__.py  main.py  server.py
server/utils/: README.md  base_server.py  command_execution.py  config.py  error_handling.py  file_operations.py  logging.py  monitoring.py  security.py  system_utilities.py  validation.py
src/parser/: javascript_parser.py
tests/: conftest.py  debug_js_variable.py  load_test.py  missing_functions.py  run_integration_tests.py  run_load_tests.py  run_performance_tests.py  test_analyzer.py  test_command_execution.py  test_context_mapper.py  test_file_operations.py  test_graph.py  test_javascript_features.py  test_javascript_parser.py  test_javascript_parser_comprehensive.py  test_javascript_parser_features.py  test_javascript_support.py  test_language_adapter_errors.py  test_language_adapter_init.py  test_language_adapters.py  test_language_support.py  test_module_resolver.py  test_neollm.py  test_neolocal_server.py  test_observability_tools.py  test_parser.py  test_performance.py  test_relationships.py  test_semantic_analysis.py  test_semantic_analyzer.py  test_server_config.py  test_server_integration.py  test_servers.py  test_sse.py  test_system_utilities.py
tests/code_understanding/: conftest.py  test_analyzer.py  test_extractor.py  test_integration.py  test_parser.py  test_relationship_extractor.py  test_symbols.py
tests/core/: test_core_server.py
tests/llm/: test_llm_server.py  test_model_manager.py  test_models.py
tests/neod/: test_neod_server.py  test_neodo_server.py
tests/neodo/: test_neodo_server.py
tests/neolocal/: test_neolocal_server.py
(+9 files in other folders)
